; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_dict.c___xmlInitializeDict.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_dict.c___xmlInitializeDict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xmlDictInitialized = common dso_local global i32 0, align 4
@xmlDictMutex = common dso_local global i32* null, align 8
@rand_seed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__xmlInitializeDict() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @xmlDictInitialized, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  store i32 1, i32* %1, align 4
  br label %14

5:                                                ; preds = %0
  %6 = call i32* (...) @xmlNewRMutex()
  store i32* %6, i32** @xmlDictMutex, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %5
  store i32 0, i32* %1, align 4
  br label %14

9:                                                ; preds = %5
  %10 = load i32*, i32** @xmlDictMutex, align 8
  %11 = call i32 @xmlRMutexLock(i32* %10)
  store i32 1, i32* @xmlDictInitialized, align 4
  %12 = load i32*, i32** @xmlDictMutex, align 8
  %13 = call i32 @xmlRMutexUnlock(i32* %12)
  store i32 1, i32* %1, align 4
  br label %14

14:                                               ; preds = %9, %8, %4
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32* @xmlNewRMutex(...) #1

declare dso_local i32 @xmlRMutexLock(i32*) #1

declare dso_local i32 @xmlRMutexUnlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
